🐛 fix: align text to left codeblocks with line numbers
Fixes issue introduced in commit 85ccc08, which centered all table text.

--- a/sass/parts/_code.scss
+++ b/sass/parts/_code.scss
@@ -16,6 +16,7 @@ code {
         margin: 0rem;
         border-collapse: collapse;
         border-spacing: 0rem;
+        text-align: left;
 
         td,
         th,
